--- a/.htaccess
+++ b/.htaccess
@@ -9,6 +9,6 @@
     RewriteCond %{REQUEST_FILENAME} !-d
     RewriteRule ^(.*)$ index.php?/$1 [L]
 	
-	RewriteCond %{HTTP_HOST} !^www\.
-	RewriteRule ^(.*)$ http://www.%{HTTP_HOST}/$1 [R=301,L]
+	#RewriteCond %{HTTP_HOST} !^www\.
+	#RewriteRule ^(.*)$ http://www.%{HTTP_HOST}/$1 [R=301,L]
 </IfModule>
