--- a/composer.json
+++ b/composer.json
@@ -4,8 +4,7 @@
 		"facebook/php-sdk": "3.2.*",
 		"guzzle/guzzle": "3.1.*",
 		"gregwar/image": "1.0.*",
-		"mockery/mockery": "0.7.*",
-		"cboden/ratchet": "0.2.*"
+		"mockery/mockery": "0.7.*"
 	},
 	"autoload": {
 		"classmap": [
